temperarily fixed layout problem with footer

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,10 @@ body {
   padding: 30px;
 }
 
+.mastfoot .inner {
+	padding: 8px 0 0 0;
+	font-size: 10px;
+}
 
 /*
  * Header
@@ -127,6 +131,7 @@ body {
 .mastfoot {
   color: #999; /* IE8 proofing */
   color: rgba(255,255,255,.5);
+  z-index: 0;
 }
 
 
@@ -141,8 +146,10 @@ body {
     top: 0;
   }
   .mastfoot {
-    position: fixed;
+    position: absolute;
     bottom: 0;
+    left: 0;
+    right: 0;
   }
   /* Start the vertical centering */
   .site-wrapper-inner {
@@ -339,4 +346,8 @@ h3.masthead-brand.emphasis {
 		display: none;
 	}
 
+}
+
+.view-area {
+	z-index: 10;
 }
